# ProximityBasedDynamicCollisionAvoidance

./: CMakeLists.txt  README.md  package.xml
config/: dynamic_collision_avoidance_settings.yaml
include/DynamicCollisionAvoidance/: DynamicCollisionAvoidanceManager.h
include/DynamicCollisionAvoidance/utils/: KDLhelper.h  algebra.h  logger.h  utilities.h
launch/: dynamic_collision_avoidance.launch.py
msg/: MotionMsg.msg  RobotMsg.msg  SensorsMsg.msg
src/: DynamicCollisionAvoidance.cpp  DynamicCollisionAvoidanceManager.cpp
utils/: KDLhelper.cpp  algebra.cpp  logger.cpp  utilities.cpp
